# validobj

./: .gitignore  .readthedocs.yaml  README.md  git_version.py  pyproject.toml  readthedocs.yaml
.github/workflows/: pythonpackage.yml  pythonpublish.yaml  pythonpublish.yml
doc/examples/: autoparse_decorator.py  autoparse_fail.py  autoparse_usage.py  basic.py  yaml_lines_usage.py  yaml_processing.py
doc/source/: conf.py  custom.rst  errors.rst  examples.rst  index.rst  inout.rst
doc/source/apisrc/: modules.rst  validobj.rst
tests/: test_errors.py  test_validation.py
validobj/: __init__.py  custom.py  errors.py  validation.py
validobj/tests/: conftest.py  test_custom.py  test_delayed_dataclasses.py  test_errors.py  test_forward.py  test_type_syntax.py  test_validation.py
