[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "validobj"
author = "Zahari Kassabov"
author-email = "zaharid@protonmail.com"
home-page = "https://github.com/Zaharid/validobj"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file="README.md"

[tool.flit.metadata.requires-extra]
test = [
    'hypothesis',
    'pytest',
    'pytest-cov'
]
doc = [
    'sphinx',
    'ruamel.yaml',
]
