[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "validobj"
author = "Zahari Kassabov"
author-email = "zaharid@protonmail.com"
home-page = "https://github.com/Zaharid/validobj"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file="README.md"
requires-python = ">=3.8"

[tool.flit.metadata.requires-extra]
test = [
    'hypothesis',
    'pytest',
    'pytest-cov'
]
doc = [
    'sphinx',
    'ruamel.yaml',
    'sphinx_rtd_theme'
]
